@@ -7,6 +7,7 @@
  - Added Phalcon\Cache\Backend::stop() to stop the cache without store anything into the backend
  - Fixed bug in Phalcon\Mvc\View that saves a empty cached content when using a cache
  - Implemented Phalcon\Db::FETCH_OBJ to return objects instead of arrays
+ - Removed checking for callable definitions in Phalcon\DI due to security reasons
 
 0.6.0
  - Added functions version, version_id, date and time to Volt
